working to avoid land with 10 attempt max

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@turf/turf": "^5.1.6",
     "axios": "^0.18.0",
     "chai": "^4.2.0",
+    "dotenv": "^7.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mocha": "^6.0.2"
